Modification de l'interface d'accueil, ajout des projets, modification l'entité KES.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <footer class="footer">
             <p id="copyright"></p>
-            <p class="footer-links">Portail développé par <a href="http://kes-africa.com" target="_blank" rel="noopener noreferrer">KES Energy & Carbon</a> pour faciliter l'accès aux outils métier</p>
+            <p class="footer-links">Portail développé par <a href="http://kes-africa.com" target="_blank" rel="noopener noreferrer">KES INSPECTIONS & PROJECTS</a> pour faciliter l'accès aux outils métier</p>
             <div class="footer-links">
                 <a href="#support">Support technique</a>
                 <a href="#documentation">Documentation</a>
